--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       background: hsl(0, 0%, 100%); 
       border-radius: 5%; 
       padding: 15px; 
+      box-shadow: 0 0 20px hsl(220, 20%, 75%);
     }
     .qr img { 
       border-radius: 5%; 
